# ChangeLog for media-video/vlc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.951 2015/04/21 06:06:09 idella4 Exp $

  21 Apr 2015; Ian Delaney <idella4@gentoo.org> vlc-2.2.0.ebuild,
  vlc-2.2.1.ebuild:
  update subslot to 5-8 in versioned ebuilds -2.2*, noted by floppym, fixes bug
  #547232 by him, discussed with proxy maintainer

  20 Apr 2015; Mike Gilbert <floppym@gentoo.org> vlc-2.2.1.ebuild,
  vlc-9999.ebuild:
  Drop glx flag here as well.

  20 Apr 2015; Ian Delaney <idella4@gentoo.org> vlc-2.2.0.ebuild,
  vlc-2.2.9999.ebuild:
  drop 'use_enable opengl glx' due to option --enable-glx made defunct, adresses
  Bug #539840

*vlc-2.2.1 (19 Apr 2015)

  19 Apr 2015; Ben de Groot <yngwin@gentoo.org>
  +files/vlc-2.2.0-rdp-1.2.0.patch, +files/vlc-2.2.0-xcb_vdpau.patch,
  +vlc-2.2.1.ebuild:
  version bump (ebuild and patches provided by proxied maintainer in bug
  #546880)

  19 Apr 2015; Ben de Groot <yngwin@gentoo.org> vlc-2.1.2.ebuild:
  Drop all keywords except alpha on 2.1.2 (bug #530254)

  18 Apr 2015; Ian Delaney <idella4@gentoo.org> +files/vlc-2.2.0-fix-xcb.patch,
  vlc-2.2.0.ebuild:
  add patch to fix issue with xcb, fixes bug #541928, thx to maintainer for
  patch lodged upstream

  18 Apr 2015; Ian Delaney <idella4@gentoo.org> vlc-2.2.9999.ebuild,
  vlc-9999.ebuild:
  reset version border of media-libs/libdvbpsi, fixes Bug #541632, confirmed by
  new maintainer

  18 Apr 2015; Ian Delaney <idella4@gentoo.org> vlc-2.1.9999.ebuild,
  vlc-2.2.0.ebuild, vlc-2.2.9999.ebuild, vlc-9999.ebuild:
  set IUSE libsamplerate to +, fixes bug #522182, issue discussed with new
  (proxy) maintainer

  18 Apr 2015; Ian Delaney <idella4@gentoo.org> -vlc-2.1.4.ebuild,
  -vlc-2.1.5.ebuild:
  remove old, hold back on 2.1.2 for now

  17 Apr 2015; Ian Delaney <idella4@gentoo.org> metadata.xml, vlc-2.2.0.ebuild:
  substitute proxy maintainer, P. Stankowski gave notice of withdrawal, new