@@ -19,15 +19,15 @@ EBUILD vlc-2.1.5-r1.ebuild 15387 SHA256 97a50e19ac49cb4c9dcc6853fdceec04e4f00c1f
 EBUILD vlc-2.1.9999.ebuild 15308 SHA256 9ad081efa162ae762eaaef79510ce450ec12460fb11c864d25542828c387d925 SHA512 83864352df405eb3872a8fc3d546c91114e5fc7cbb74ed767d94ce4299787dde8fe8ee97c26fef1597809b524e7ce7a49dfd95774e3424e87ab64f122144de8b WHIRLPOOL c52b17f248cf34e86a4a469662d674ea8b223386a152488747b75a67bf8b0d1e0c6e4a8dfefab4aa7be5c804608a73be0eba539009d13ad31bc286efa0635620
 EBUILD vlc-2.2.0.ebuild 15557 SHA256 657c57cefc34b90873cd9bbed9819549dde9e4611bec0e8d04209c0205e9a451 SHA512 0aba1836e214b532d172d648583a49d5bd7e03d5845f419684b014c505cc9800ec9229a966a4f9b222ae12894b519653622b48217f12a804489f36637e1dbbb7 WHIRLPOOL 2e68c09775d86a33493d7ef3cc9cdf276663c22469358b3c7e104504ea110d05c427eeacbefc556805c8bc15f93602553eec1789b12231a74204e9caad13ae3a
 EBUILD vlc-2.2.1.ebuild 15650 SHA256 6dab9977fe98660012ef8016b30524c2a0101b1cfa6e7c0b9ad79a7da8e2cad2 SHA512 3b026aef363d5a34ee344a54f08dde28c62859ce70b06328c372e8f39f8c048a51b3fa5db0fb95f2899173e74e9c20142fd7e205a19471661cc6b49ece95b05a WHIRLPOOL 8fce788208c83b2b9e924c3d1e961ffa4e15e8da4e7dc9d5f4c17bf73e4e1496414c734eda914c1d02f5d6f8cab708035512c646c9b396d1c9caffd0e28c1147
-EBUILD vlc-2.2.9999.ebuild 15475 SHA256 cd69aa3138becd63af1d640c13b6637be62e88e7ee5290a23f2d1803207e0b35 SHA512 270791ef03a552badb233f75dac42b96053b05c03801321c1ec6db28176a27bf63330505a5b0e5ffeb7d6a861798cafd15dd6947f5ef8073bdf1236445062a6e WHIRLPOOL fe230a2909c50e103bc05034904ba37a8bf86467267737cc0eed1e04b0b06348f0130835afd21b398286152b7571fc007a49e8f1f025337a1e15edb9493be1eb
-EBUILD vlc-9999.ebuild 15466 SHA256 02045fe1c921d5728229d6fad828b5e1c9d827a947995fa8d5963cade3764c0e SHA512 88e979367822b7acda0a3f97b947b63216a29705947d2e28a5c7515e19494c029026625d14c90a3b6e4e5ca5b35a1bc3e7d3ce88791a94027b0d239071fcca9d WHIRLPOOL 08bbda82f1e1cf1952c74ae220782a31372bc8d8c41d8468cd26b232427a3329f065a5a9f202ab3be3f5d8a622b38c1c8407fa56fdc7a9624e3307ce3bef5509
-MISC ChangeLog 37262 SHA256 85b394b3cc64bd68874b6dfd8fb522876306591788c188d30c7e83338af0a8ac SHA512 955f95100000c13655e28f23ce34764af5ed0c2cdc969412c3d0c2dbf2ba3b4d13eac66618476d4cc9ec53c9061a52df22253027f817fe22ace9569f46bc3a75 WHIRLPOOL e32491720abbfc3183549e9ccfb6d46ef5d7024d5eb650f4808fadd7dbd238da81af59f55431500c02c7697fb0ace335d5522c17cf6dfd51d5652af01c7eccce
+EBUILD vlc-2.2.9999.ebuild 15475 SHA256 2deba405c5708e5c4c949eb8ecd22e2d6f8446c297766867c91f7fa4a733b1e4 SHA512 0235bfddc662fea8579acc6d57aa10712b225ca86d06e231e04f0a2b9a5ce3a4ac96ded428ba6f88713691e2b7a3060248b635ac5ebdf1190a08ae5e27483104 WHIRLPOOL 48973fa508fc279ed9f43f7ae11987c15ccc2ed9380516f616f0c8d19abe63bf4dab9a9c1eff52fe56bc92ddae0fc254d26cf2ad2a192318858502d90ad069b8
+EBUILD vlc-9999.ebuild 15466 SHA256 178d0c7909314428ed9961dc6efa52f6196f35512c3f0c2f041d3f8482c19a2c SHA512 26218e2ab86aabadb58c9af1ff5318e928728b6ef763d69ef5abc21e42d799d532f55ee61838e8d74b58b049e3cea2d830838d6e11b48f949875d966e57bfdae WHIRLPOOL 18074d1dbf4dd153e68c15d7b1c65ae15bb493ee5cfcdcdacf9f7a2635e9f94605ef677a64b9540b00f86931be88fca309e21cf4cc648ab55433e5c697891033
+MISC ChangeLog 37392 SHA256 621ef37daa147a6e01564f70215c42f2f93eee2669e66fca35061cfff0bcea4d SHA512 5d22320974d7f8dacef876338f55ba7e27b7cd0451af0dd82545fb421b8b149c5aa6630ff0c54f46aeacaf1003684b8619eff7f0ebedc7556faa6a951f5acbd0 WHIRLPOOL f9189ec922493738070ec3dd8a57cc612f2348fd390a59bf096e8f01d79d607113c55f7b3ca15bec509ba1f5330dc77568778aed6525ca3c4130dd773848b750
 MISC ChangeLog-2011 113818 SHA256 34efd4743fdaa4b24df7042e0cff14ab00cc5fae0838bf489b2eea620654fcc2 SHA512 9b1060fc57d0a8912a38c269b7ec140287c883798f6f3528f0f2d43b5772817f31e0addf4f88f139b82cda4e094d2f9a30e3b9d1933022b81b974436ed158d9d WHIRLPOOL bfe449ace05bac74b195d82eb2b3648b2240f92dabf6446f6ba93ca51b7ecd999ab5b9247dfd1f1a7cdab8d309684ffcd1c829773a471d862c19814a18db7ffe
 MISC metadata.xml 6538 SHA256 cee37b9633b574305f8c07a19d7eee2d4362bd6de51822f98b7f150367ee5fe1 SHA512 29e8b36e5e4c89fdeb7cd3a9e9014a03855540d5b8246172febd4a5465cb50030187366c4d2c982115b08e0cd71e72e9dca7d49fd6ab8f263ad5b718df392345 WHIRLPOOL f15ca39b118e250412484a3be271f3eb2f476430e4957c77596cb11ca51752b80410e820adb559409dfd43fc631fc3262c87ac3f3ba2e4e8c53eb75c5a3baa8e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlU16OEACgkQso7CE7gHKw2ugACgvoPvMgiKr7srGgB48Kgn2Arz
-v8oAoLBQZZjyVjalulHWHeJlH7fwd7v7
-=eD/J
+iEYEAREIAAYFAlU2/GkACgkQso7CE7gHKw2YsgCfQvvc8wMgEcuTLoTV9424kbZI
+4+oAn3yzNGkgh471Ojfqxq6BqIF1+CQO
+=HfXi
 -----END PGP SIGNATURE-----
