@@ -1,6 +1,10 @@
 # ChangeLog for media-video/vlc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.951 2015/04/21 06:06:09 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.952 2015/04/22 01:41:47 idella4 Exp $
+
+  22 Apr 2015; Ian Delaney <idella4@gentoo.org> vlc-2.2.9999.ebuild,
+  vlc-9999.ebuild:
+  add update of subslot to these ebuilds
 
   21 Apr 2015; Ian Delaney <idella4@gentoo.org> vlc-2.2.0.ebuild,
   vlc-2.2.1.ebuild:
